_sass/_settings/_colors.scss
@mixin darkMode() {
  .theme-dark {
    @content;
  }

  @media (prefers-color-scheme: dark) {
    :root {
      @content;
    }
  }
}

:root {
  --color-primary-dark: #31739c;
  --color-primary-base: #4a9cd5;
  --color-primary-light: #8bd5ff;

  --color-action-base: #ee5a62;

  --color-mono-black: #020402;
  --color-mono-muted: #e8fbff;
  --color-mono-white: #FFFEFC;
}

@include darkMode() {
  --color-primary-dark: #8bd5ff;
  --color-primary-light: #31739c;

  --color-action-base: #ff94b4;

  --color-mono-black: #FFFEFC;
  --color-mono-muted: #04282e;
  --color-mono-white: #020402;
}

// This function pulls specific color values from the below map
@function color($color, $tone: base) {
  @if map-has-key($color-map, $color) {
    @return map-get(map-get($color-map, $color), $tone);
  }
}

// Map for storing all color variables
$color-map: (
  primary: (
    dark: var(--color-primary-dark),
    base: var(--color-primary-base),
    light: var(--color-primary-light)
  ),

  action: (
    base: var(--color-action-base)
  ),

  mono: (
    black: var(--color-mono-black),
    muted: var(--color-mono-muted),
    white: var(--color-mono-white)
  )
);

